--- a/client/index.css
+++ b/client/index.css
@@ -9,8 +9,22 @@
     justify-content: space-around;
 }
 
+.container{
+    padding-bottom: 10px;
+}
+
 
 .card {
-    width: 30%; /* Adjust this value as per your design */
+    width: 30%; 
     margin-bottom: 20px;
+}
+
+.footer {
+    width: 100%;
+    background-color: #263a4e; 
+    padding: 20px 0;
+    text-align: center;
+    position: relative;
+    bottom: 0;
+    left: 0;
 }
