--- a/client/sell.css
+++ b/client/sell.css
@@ -1,12 +1,28 @@
-/* sell.css */
+/* Updated sell.css */
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh; /* This ensures that your content is vertically centered in the viewport */
+}
+
 #sellContainer {
     max-width: 600px;
-    margin: auto;
+    margin: 20px auto; /* Adjusted to add space on the top for better spacing */
     padding: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); /* Optional: Adds shadow for depth */
+    border-radius: 5px; /* Rounds corners */
+    background: #fff; /* Optional: Changes background color */
 }
 
 form {
     margin-top: 20px;
+}
+
+.startSellingYourLunchboxesHere {
+    margin-top: 20px; /* Adds space above the text as needed */
+    text-align: center;
 }
 
 label {
@@ -15,6 +31,51 @@ label {
 
 textarea {
     resize: vertical; /* Allow vertical resizing of textarea */
+    width: 100%; /* Ensures textarea utilizes full container width */
+    padding: 12px 20px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
 
-/* Add more styles as needed */
+/* Styling the Sell Button */
+#sellBtn {
+    background-color: #4CAF50; /* Green background */
+    color: white;
+    padding: 14px 20px;
+    margin: 10px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+#sellBtn:hover {
+    background-color: #45a049; /* Darker shade of green on hover */
+}
+
+/* Adjusting inputs and the submit button to match */
+input[type="text"], input[type="date"], input[type="file"], textarea, button[type="submit"] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+button[type="submit"] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+button[type="submit"]:hover {
+    background-color: #45a049;
+}
