--- a/client/client.css
+++ b/client/client.css
@@ -1,1 +1,10 @@
 
+.footer {
+    width: 100%;
+    background-color: #263a4e; 
+    padding: 20px 0;
+    text-align: center;
+    position: relative;
+    bottom: 0;
+    left: 0;
+}
