--- a/client/contact.css
+++ b/client/contact.css
@@ -6,6 +6,8 @@
     font-family: 'Titillium Web', sans-serif;
     background-color: #67bac0;
     font-weight: normal;
+    padding-bottom: 20px; 
+    /* Ensure there's space below the container */
 }
 
 .about-us {
@@ -80,6 +82,8 @@
     /* Add rounded corners */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     /* Add shadow for depth */
+    margin-bottom: 20px; 
+    /* Add bottom margin to create space below the form */
 }
 
 .contactInput {
@@ -116,7 +120,6 @@
     color: white;
     box-shadow: 0px 0px 0px 2px #ffffff;
     /* Add a box-shadow to create a border-like effect */
-
 }
 
 .contactButton:hover {
