--- a/client/contact.css
+++ b/client/contact.css
@@ -1,226 +1,163 @@
-/* contact.css */
 .contactContainer {
     text-align: center;
-    margin-top: 20px;
-    color: white;
-    font-family: 'Titillium Web', sans-serif;
-    background-color: #67bac0;
+    flex-direction: column;
+    display: flex;
+    justify-content: space-around;
+    background-color: #FBF9EF;
+    color: #006267;
+    font-family: 'Brandon Grotesque Bold', 'helvetica', sans-serif;
     font-weight: normal;
-    padding-bottom: 20px;
-    padding-right: 20px;
-    padding-left: 20px;
-    /* Ensure there's space below the container */
-}
-
-.about-us {
-    font-size: 20px;
-    padding: 20px;
-    font-style: italic;
-    font-weight: 100;
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
 }
 
 .about-us img {
-    max-width: 100%;
-    /* Set the maximum width to 100% to ensure responsiveness */
     width: 100%;
-    /* Set the width to 100% to ensure the image fills its container */
+    max-width: 100%;
     height: auto;
-    /* Maintain aspect ratio */
     display: block;
-    /* Ensure image behaves as a block element */
     margin: 0 auto;
-    /* Center the image horizontally */
-
 }
 
-/* Styles for the new features section */
-.features {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 40px;
-    /* Adjust margin as needed */
-}
-
-/* Styles for individual feature */
-.feature {
-    flex: 1;
-    padding: 20px;
-    background-color: #67bac0;
-    /* Background color same as contactContainer */
-    border-radius: 8px;
-    margin-right: 20px;
-    /* Adjust margin between features */
-}
-
-/* Ensure last feature doesn't have right margin */
-.feature:last-child {
-    margin-right: 0;
-}
-
-.feature h3 {
-    font-size: 20px;
-    color: white;
-    /* Font color */
-    margin-bottom: 10px;
-}
-
-.feature p {
-    font-size: 16px;
-    color: white;
-    /* Font color */
-}
-
-.AboutUs,
-.contactTitle {
-    background-color: #df6b3f;
-    max-width: 300px;
+.OurPhilosophyTitle {
+    max-width: 80%;
     font-weight: bold;
-    text-align: center;
     margin: 0 auto;
-    /* Center align the text */
-    border-radius: 8px;
-    /* Add rounded corners */
+    margin-top: 100px;
+    text-align: left;
 }
 
-.AboutUsText {
-    /*font-weight: 200;*/
-    /*font-style: normal;*/
+.OurPhilosophyText {
     font-size: 20px;
+    max-width: 80%;
+    margin: 0 auto;
+    color: #000000;
+    margin-bottom: 150px;
+    text-align: left;
 }
 
-/*FAQ*/
-/* FAQ Container */
 .faqContainer {
-    position: relative; /* Add relative positioning to the container */
-    max-width: 1000px;
+    width: 100%;
     margin: 0 auto;
-    padding: 20px;
     display: flex;
+    flex-direction: row;
     align-items: center;
-    /* Vertically center items */
-    text-align: center;
-    /* Added property for horizontal centering */
-    margin-bottom: 20px;
-}
-
-/* FAQ Header */
-.faqHeader h2 {
-    text-align: center;
-    font-size: 120px;
-    color: #df6b3f;
-    /* Match the button color */
-    font-weight: bold;
-    align-items: center;
-    /* Vertically center items */
+    background-color: #006267;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    color: white;
     justify-content: center;
-    /* Horizontally center items */
-    margin-bottom: 20px;
-    /* Increase spacing between FAQ text and FAQs */
 }
 
-/* FAQ Content */
+.faqHeader {
+    text-align: center;
+    margin-left: 250px;
+}
+
+.faqHeader h2 {
+    font-size: 120px;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+}
 
 .faqContent {
-    /*border-top: 1px solid #ccc;*/
-    margin-left: 100px; 
-    /* Adjust the value for desired positioning */
+    margin-left: 250px;
+    text-align: center;
 }
 
-/* FAQ Question */
 .faqQuestion {
     padding: 10px;
     border-top: 1px solid #ccc;
     cursor: pointer;
     font-size: 30px;
+    text-align: center;
+    display: inline-block;
+    width: calc(80% - 20px);
 }
 
 .faqQuestion h3 {
     margin-bottom: 10px;
     color: #ffffff;
-    /* Match the button color */
 }
 
 .arrow {
     display: inline-block;
-    margin-left: 5px; /* Adjust as needed */
-    transition: transform 0.3s; /* Add transition for smooth animation */
-  }
-  
-  .opened .arrow {
-    transform: rotate(180deg); /* Rotate the arrow when the question is opened */
-  }
-
-/* Answer initially hidden */
-.answer {
-    display: none; /* Initially hide the answer */
-    color: #ffffff;
-    font-size: 20px; /* Adjust the font size */
-    font-weight: normal; /* Adjust the font weight */
-    line-height: 1.5; /* Adjust the line height */
-    margin-top: 10px; /* Add some spacing above the answer */
-    margin-bottom: 10px; /* Add some spacing below the answer */
+    margin-left: 5px;
+    transition: transform 0.3s;
 }
 
-/*END OF FAQ*/
+.opened .arrow {
+    transform: rotate(180deg);
+}
 
-.ContactUs {
-    background-color: #df6b3f;
-    max-width: 400px;
+.answer {
+    display: inline-block;
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: normal;
+    line-height: 1.5;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    max-width: 100%;
+    display: none;
+}
+
+.StillHaveQuestionsContainer {
+    width: 100%;
+    box-sizing: border-box;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    background-color: #C6D7CD;
+    padding-top: 100px; 
+    padding-bottom: 100px;
+}
+
+.ContactInfoContainer {
+    float: left;
+    width: 50%;
+}
+
+.ContactFormContainer {
+    float: right;
+}
+
+.StillHaveQuestionsTitle {
     font-weight: bold;
     text-align: center;
     margin: 0 auto;
-    /* Center align the text */
-    border-radius: 8px;
-    /* Add rounded corners */
-    margin-bottom: 30px;
-}
-
-.contact-form-container {
-    display: flex;
-    /*justify-content: flex-start;*/
-    margin-top: 5px;
+    margin-bottom: 100px;
 }
 
 #contact-info {
-    margin: 10px auto;
+    margin: 20px auto;
     border-collapse: collapse;
     font-size: 20px;
     max-width: 500px;
-    /* Adjust width as needed */
 }
 
 #contact-info th,
 #contact-info td {
-    padding: 2px;
-    border-bottom: 1px solid #ccc;
+    padding: 5px;
+    border-bottom: 1px solid #006267;
     text-align: center;
-    /* Align text left */
 }
 
-/*.contactFormTitle {
-    background-color: #df6b3f;
-    padding: 10px;
-    border-radius: 4px;
-}*/
-
 #contactForm {
+    background-color: #FBF9EF;
     text-align: left;
-    max-width: 500px;
-    /* Limit the maximum width of the form */
+    width: 500px;
     margin: 0 auto;
-    /* Center the form horizontally */
     padding: 20px;
-    /* Add some padding for better appearance */
-    background-color: #df6b3f;
-    /* Set background color */
     border-radius: 8px;
-    /* Add rounded corners */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    /* Add shadow for depth */
     margin-bottom: 20px;
-    /* Add bottom margin to create space below the form */
     margin-right: 20px;
-    /* Add space between contact form and contact info */
+    font-weight: bold;
 }
 
 .contactInput {
@@ -228,37 +165,69 @@
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid #ccc;
+    border: 1px solid #ffffff;
     border-radius: 4px;
     box-sizing: border-box;
     height: 100px;
-    /* Adjust height to match other input fields */
 }
 
 #input-name,
 #input-email,
 #input-subject,
-#input-inquiry {
+#input-inquiry,
+#input-message {
     height: auto;
-    /* Adjust height to match other input fields */
+    background-color: #ffffff;
+    border: 1px solid #C6D7CD;
 }
 
 .contactButton {
-    background-color: #df6b3f;
+    background-color: #006267;
+    font-weight: bold;
     padding: 14px 20px;
     width: 200px;
-    /* Adjust the width as needed */
     display: block;
-    /* Ensure the button behaves as a block element */
     margin: 0 auto;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     color: white;
     box-shadow: 0px 0px 0px 2px #ffffff;
-    /* Add a box-shadow to create a border-like effect */
 }
 
 .contactButton:hover {
-    background-color: #b64519;
+    background-color: #00494d;
+}
+
+.features {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-left: 80px;
+    padding-right: 80px;
+    align-items: center;
+    text-align: center;
+    color: #006267;
+}
+
+.feature {
+    flex: 1;
+    padding: 80px;
+    margin-right: 20px;
+}
+
+.feature:last-child {
+    margin-right: 0;
+}
+
+.feature h3 {
+    font-weight: bold;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.feature p {
+    font-size: 20px;
+    color: #000000;
 }
